# Pristine-AIOPS

./: 'q  .gitignore  Docker.syslogReceiver  alembic.ini  docker-compose.yml  fpristine.sql  requirements.txt
alembic/: env.py
backend/: Dockerfile.backend  alembic.ini  entrypoint.sh  go.mod  go.sum  requirements.txt
backend/app/: main.py
frontend/: .babelrc  Docker.frontend  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
kafka/: producer  receiver-test.c
kafka/logs/: controller.log.2025-04-14-15  controller.log.2025-04-14-16  controller.log.2025-04-14-17  controller.log.2025-04-14-18  controller.log.2025-04-14-19  controller.log.2025-04-14-20  controller.log.2025-04-14-21  controller.log.2025-04-20-22  controller.log.2025-04-20-23  controller.log.2025-04-21-00  controller.log.2025-04-21-01  controller.log.2025-04-21-17  (+246 more)
netconf/: Cisco-IOS-XE-interfaces-oper.yang  capabilities.py  netconf-connect.py
netflow/: Dockerfile.consumer  Dockerfile.producer  consumer  consumer-v1.c  consumer.c  consumer2223  consumer4  consumer5  listener-v1  listener-v1.c  listener-v1.txt  listener.c  listener111  listener222
opensearch/: Dockerfile.OpenSearch  ext.cnf  initOpenSearch.py  node.csr  opensearch-security.policy  opensearch.yml
pg-docker-setup/: init.sql
postgresql/: entrypoint.sh  init.sql
signals/: Dockerfile.syslogSignals  Dockerfile.trapSignals  requirements.txt  statefulSyslogRules.json  statefulTrapRules.json  statefulrules.json  syslog-signals.py  tasks.py  trap-signals.py
syslogs/: Dockerfile.Cconsumer  Dockerfile.consumer  Dockerfile.producer  Dockerfile.signals  consumer  consumer.c  consumer.py  consumer.txt  deleteAllSyslogs.py  mnemonics.json  producer.c  receiver  regex_data.json  requirements.txt  signalConsumer.py  statefulrules.json  syslogDockerfile  utils.py
syslogs/consumer/: CMakeLists.txt  Dockerfile.consumer  bulk.c  bulk.h  config.c  config.h  main.c  process.c  process.h
syslogs/signals/: CMakeLists.txt  Dockerfile.signals  activeSignals.c  activeSignals.h  main.c  process.c  process.h  rules.c  rules.h
telemetry/: cisco_grpc_dialout.pb.cc  cisco_grpc_dialout.pb.h  cisco_grpc_dialout.proto  go.mod  go.sum  go.work  go.work.sum  main-v1.txt  main.go
traps/: Dockerfile.consumer  Dockerfile.producer  consumer.py  listener2223  producer.c  requirements.txt  snmpTrapOids.json  statefulTrapRules.json  statefulrules.json  trapTags.json
traps/consume/: CMakeLists.txt  bulk.c  config.c  config.h  main.c  process.c
traps/signals/: CMakeLists.txt  Dockerfile.signals  activeSignals.c  activeSignals.h  main.c  process.c  rules.c  rules.h
yang/: Cisco-IOS-XE-logging.yang  Cisco-IOS-XE-native.yang  Cisco-IOS-XE-types.yang
(+228 files in other folders)
